--- a/mode-settings/eglot-settings.org
+++ b/mode-settings/eglot-settings.org
@@ -1,8 +1,7 @@
 * Eglot
-#+PROPERTY: header-args:emacs-lisp :load no
 Currently not using this in favor of LSP-mode
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :load no
 (use-package eglot :straight t)
 (setq my/lsp-package 'eglot)
 
