--- a/mode-settings/config-modes-settings.org
+++ b/mode-settings/config-modes-settings.org
@@ -2,5 +2,5 @@
 #+PROPERTY: header-args:emacs-lisp :load yes
 ** Yaml
 #+begin_src emacs-lisp :load yes
-(use-package yaml-mode :straight t)
+(use-package yaml-mode)
 #+end_src
