--- a/mode-settings/lsp-settings.org
+++ b/mode-settings/lsp-settings.org
@@ -9,7 +9,6 @@
 (literate-elisp-load "corfu-vertico-settings.org")
 (use-package
  lsp-mode
- :straight t
  :custom (lsp-completion-provider :none) ; We use corfu
  :init
  (setq lsp-signature-render-documentation t)
@@ -54,21 +53,17 @@
  ;; Optionally configure the cape-capf-buster.
  (setq-local completion-at-point-functions
              (list (cape-capf-buster #'lsp-completion-at-point)))
-
  :hook
  (lsp-mode . lsp-enable-which-key-integration)
  (lsp-completion-mode . my/lsp-mode-setup-completion)
  ;; (lsp-mode . lsp-ui-mode)
  )
-
-
 #+end_src
 ** LSP UI
 For right now, I don't really like LSP UI, let's not load this config
 #+begin_src emacs-lisp :load no
 (use-package
  lsp-ui
- :straight t
  :config
  (setq lsp-ui-doc-enable nil)
  (setq lsp-ui-peek-enable nil)
@@ -138,7 +133,7 @@ I'm now using iedit instead of my hand-crafted [[https://github.com/jsigman/lsp-
 
 (use-package
  iedit
- :straight t
+ 
  :init (setq iedit-toggle-key-default (kbd "C-,")))
 (defun my/lsp-iedit ()
   (lsp-iedit-highlights)
@@ -149,7 +144,7 @@ I'm now using iedit instead of my hand-crafted [[https://github.com/jsigman/lsp-
 (pcase my/lsp-highlight-setup
   ("iedit" (use-package
     iedit
-    :straight t
+    
     :init
     (setq iedit-toggle-key-default nil)
     (setq iedit-auto-narrow t)
@@ -174,12 +169,12 @@ Configure here the modes for which you'd like to run LSP mode.
 
   (use-package
    lsp-docker
-   :straight t
+   
    :config (add-hook 'dockerfile-mode-hook #'lsp-deferred))
 
-  (use-package lsp-mssql :straight t :hook (sql-mode . lsp))
+  (use-package lsp-mssql  :hook (sql-mode . lsp))
   ;; (use-package
-  ;;  lsp-markdown :straight t
+  ;;  lsp-markdown 
   ;;  :config (add-hook 'markdown-mode-hook 'lsp-markdown))
 
   ;; ;; Automatically install lsp servers
