--- a/mode-settings/company-settings.org
+++ b/mode-settings/company-settings.org
@@ -5,15 +5,12 @@ Company was a great package, but I'm currently not using it. I migrated over to 
 ;----------------AUTO COMPLETE MODE--------------;
 (use-package
  company
- :straight t
  :config
  ;; Dont wait to show completions
  (setq company-idle-delay 0)
  (setq company-minimum-prefix-length 1)
  (setq company-quickhelp-delay nil)
  (global-company-mode t)
-
-
  (use-package
   company-async-files
   :straight
@@ -21,7 +18,6 @@ Company was a great package, but I'm currently not using it. I migrated over to 
     :type git
     :host github
     :repo "CeleritasCelery/company-async-files"))
-
 
  ; I dont want these company backends
  (setq company-backends (remove 'company-bbdb company-backends))
@@ -47,21 +43,14 @@ Company was a great package, but I'm currently not using it. I migrated over to 
  (setq company-backends (remove 'company-dabbrev company-backends)))
 (use-package
  company-quickhelp
- :straight t
+
  :config ;; Sort by recent use
  (company-quickhelp-mode))
 
 (setq company-dabbrev-downcase nil)
 
-(use-package
- company-box
- :straight t
- :hook (company-mode . company-box-mode))
-
-(use-package
- company-prescient
- :straight t
- :config (company-prescient-mode t))
+(use-package company-box :hook (company-mode . company-box-mode))
+(use-package company-prescient :config (company-prescient-mode t))
 
 ;; Add yasnippet support for all company backends
 ;; https://github.com/syl20bnr/spacemacs/pull/179
@@ -80,8 +69,5 @@ Company was a great package, but I'm currently not using it. I migrated over to 
       (mapcar #'company-mode/backend-with-yas company-backends))
 
 
-(use-package
- company-posframe
- :straight t
- :config (company-posframe-mode t))
+(use-package company-posframe :config (company-posframe-mode t))
 #+end_src
