--- a/mode-settings/ivy-counsel-swiper-settings.org
+++ b/mode-settings/ivy-counsel-swiper-settings.org
@@ -1,9 +1,9 @@
 * Ivy/Counsel/Swiper Settings
 Currently not using this in favor of Vertico
 #+begin_src emacs-lisp  :load no
-(use-package ivy :straight t)
-(use-package counsel :straight t)
-(use-package swiper :straight t)
+(use-package ivy)
+(use-package counsel)
+(use-package swiper)
 
 ;; Case insensitive searchs
 (setq completion-ignore-case t)
@@ -77,21 +77,19 @@ Currently not using this in favor of Vertico
 (setq ivy-extra-directories ())
 
 ;; Persist histories across startups
-(use-package prescient :straight t)
-(use-package ivy-prescient :straight t)
+(use-package prescient)
+(use-package ivy-prescient)
 ;; Use prescient to store history of search results and preference based on these
 (ivy-prescient-mode)
 
 (prescient-persist-mode t)
 
-
-(use-package counsel-projectile :straight t)
+(use-package counsel-projectile)
 (counsel-projectile-mode)
 (setq projectile-completion-system 'ivy)
 
 (use-package
  all-the-icons-ivy-rich
- :straight t
  :config (all-the-icons-ivy-rich-mode t))
-(use-package ivy-rich :straight t :config (ivy-rich-mode t))
+(use-package ivy-rich :config (ivy-rich-mode t))
 #+END_SRC
