--- a/mode-settings/rg-settings.org
+++ b/mode-settings/rg-settings.org
@@ -2,15 +2,6 @@
 #+PROPERTY: header-args:emacs-lisp :load yes
 
 #+begin_src emacs-lisp
-(use-package
- wgrep
- :straight t
- :config (setq wgrep-auto-save-buffer t))
-
-(use-package
- rg
- :straight t
- :config
- (rg-enable-menu)
- (setq rg-executable "rg"))
+(use-package wgrep :config (setq wgrep-auto-save-buffer t))
+(use-package rg :config (rg-enable-menu) (setq rg-executable "rg"))
 #+END_SRC
